# learnopengl-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-test.yml
crates/1.getting_started/1.1.hello_window/: Cargo.toml
crates/1.getting_started/1.2.hello_window_clear/: Cargo.toml
crates/1.getting_started/2.1.hello_triangle/: Cargo.toml
crates/1.getting_started/2.2.hello_triangle_indexed/: Cargo.toml
crates/1.getting_started/2.3.hello_triangle_exercise1/: Cargo.toml
crates/1.getting_started/2.4.hello_triangle_exercise2/: Cargo.toml
crates/1.getting_started/2.5.hello_triangle_exercise3/: Cargo.toml
crates/1.getting_started/3.1.shaders_uniform/: Cargo.toml
crates/1.getting_started/3.2.shaders_interpolation/: Cargo.toml
crates/1.getting_started/3.3.shaders_class/: 3.3.shader.fs  3.3.shader.vs  Cargo.toml
crates/1.getting_started/3.4.shaders_exercise1/: 3.3.shader.fs  3.3.shader.vs  Cargo.toml
crates/1.getting_started/3.5.shaders_exercise2/: 3.3.shader.vs  Cargo.toml
crates/1.getting_started/3.6.shaders_exercise3/: 3.3.shader.fs  3.3.shader.vs  Cargo.toml  answer.txt
crates/1.getting_started/4.1.textures/: 4.1.texture.fs  Cargo.toml
crates/1.getting_started/4.2.textures_combined/: Cargo.toml
crates/1.getting_started/4.3.textures_exercise1/: 4.2.texture.fs  4.2.texture.vs  Cargo.toml
crates/1.getting_started/4.4.textures_exercise2/: Cargo.toml
crates/1.getting_started/4.5.textures_exercise3/: 4.2.texture.fs  Cargo.toml
crates/1.getting_started/4.6.textures_exercise4/: 4.2.texture.fs  Cargo.toml
crates/1.getting_started/5.1.transformations/: Cargo.toml
crates/1.getting_started/5.1.transformations/src/: main.rs
crates/1.getting_started/5.2.transformations_exercise1/: 5.1.transform.vs  Cargo.toml  answer.txt
crates/1.getting_started/5.2.transformations_exercise1/src/: main.rs
crates/1.getting_started/5.3.transformations_exercise2/: Cargo.toml
crates/1.getting_started/5.3.transformations_exercise2/src/: main.rs
crates/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.vs  Cargo.toml
crates/1.getting_started/6.1.coordinate_systems/src/: main.rs
crates/1.getting_started/6.2.coordinate_systems_depth/: 6.2.coordinate_systems.fs  6.2.coordinate_systems.vs  Cargo.toml
crates/1.getting_started/6.2.coordinate_systems_depth/src/: main.rs
crates/1.getting_started/6.3.coordinate_systems_multiple/: 6.3.coordinate_systems.fs  Cargo.toml
crates/1.getting_started/6.3.coordinate_systems_multiple/src/: main.rs
crates/1.getting_started/6.4.coordinate_systems_exercise3/: 6.3.coordinate_systems.vs  Cargo.toml
crates/1.getting_started/6.4.coordinate_systems_exercise3/src/: main.rs
crates/1.getting_started/7.1.camera_circle/: Cargo.toml
crates/1.getting_started/7.1.camera_circle/src/: main.rs
crates/1.getting_started/7.2.camera_keyboard_dt/: Cargo.toml
crates/1.getting_started/7.2.camera_keyboard_dt/src/: main.rs
crates/1.getting_started/7.3.camera_mouse_zoom/: Cargo.toml
crates/1.getting_started/7.3.camera_mouse_zoom/src/: main.rs
crates/2.lighting/1.colors/: 1.colors.fs  Cargo.toml
crates/2.lighting/1.colors/src/: main.rs
crates/2.lighting/2.3.basic_lighting_exercise1/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.2.light_cube.vs  Cargo.toml
crates/2.lighting/2.3.basic_lighting_exercise1/src/: main.rs
crates/2.lighting/2.5.basic_lighting_exercise3/: 2.2.basic_lighting.fs  Cargo.toml  answer.txt
crates/2.lighting/2.5.basic_lighting_exercise3/src/: main.rs
crates/2.lighting/3.1.materials/: 3.1.light_cube.fs  Cargo.toml
crates/2.lighting/3.1.materials/src/: main.rs
crates/2.lighting/4.2.lighting_maps_specular_map/: 4.2.lighting_maps.fs  4.2.lighting_maps.vs  Cargo.toml
crates/2.lighting/4.2.lighting_maps_specular_map/src/: main.rs
crates/2.lighting/4.4.lighting_maps_exercise4/: 4.4.lighting_maps.fs  Cargo.toml
crates/2.lighting/4.4.lighting_maps_exercise4/src/: main.rs
crates/2.lighting/5.3.light_casters_spot/: 5.3.light_casters.fs  Cargo.toml
crates/2.lighting/5.3.light_casters_spot/src/: main.rs
crates/2.lighting/5.4.light_casters_spot_soft/: 5.4.light_casters.fs  Cargo.toml
crates/2.lighting/5.4.light_casters_spot_soft/src/: main.rs
crates/3.model_loading/1.model_loading/: 1.model_loading.fs  1.model_loading.vs  Cargo.toml
crates/3.model_loading/1.model_loading/src/: main.rs
crates/4.advanced_opengl/1.1.depth_testing/: 1.1.depth_testing.vs  Cargo.toml
crates/4.advanced_opengl/1.1.depth_testing/src/: main.rs
crates/4.advanced_opengl/1.2.depth_testing_view/: 1.2.depth_testing.fs  Cargo.toml
crates/4.advanced_opengl/1.2.depth_testing_view/src/: main.rs
crates/4.advanced_opengl/10.2.asteroids/: 10.2.instancing.fs  10.2.instancing.vs  Cargo.toml
crates/4.advanced_opengl/10.2.asteroids/src/: main.rs
crates/4.advanced_opengl/10.3.asteroids_instanced/: 10.3.asteroids.vs  Cargo.toml
crates/4.advanced_opengl/10.3.asteroids_instanced/src/: main.rs
crates/4.advanced_opengl/11.1.anti_aliasing_msaa/: Cargo.toml
crates/4.advanced_opengl/11.1.anti_aliasing_msaa/src/: main.rs
crates/4.advanced_opengl/11.2.anti_aliasing_offscreen/: 11.2.aa_post.fs  11.2.aa_post.vs  11.2.anti_aliasing.fs  Cargo.toml
crates/4.advanced_opengl/11.2.anti_aliasing_offscreen/src/: main.rs
crates/4.advanced_opengl/3.1.blending_discard/: 3.1.blending.fs  Cargo.toml
crates/4.advanced_opengl/3.1.blending_discard/src/: main.rs
crates/4.advanced_opengl/3.2.blending_sort/: 3.2.blending.fs  Cargo.toml
crates/4.advanced_opengl/3.2.blending_sort/src/: main.rs
crates/4.advanced_opengl/6.1.cubemaps_skybox/: 6.1.skybox.fs  Cargo.toml
crates/4.advanced_opengl/6.1.cubemaps_skybox/src/: main.rs
crates/4.advanced_opengl/9.2.geometry_shader_exploding/: 9.2.geometry_shader.fs  9.2.geometry_shader.gs  9.2.geometry_shader.vs  Cargo.toml
crates/4.advanced_opengl/9.2.geometry_shader_exploding/src/: main.rs
shared/: Cargo.toml  build.rs
shared-ex/: Cargo.toml
shared-ex/src/: lib.rs  model.rs
shared/src/: camera.rs  filesystem.rs  lib.rs  mesh.rs  model.rs  shader.rs  shader_m.rs  shader_s.rs
(+211 files in other folders)
