[package]
name = "learnopengl-1-6-4-coordinate_systems_exercise3"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
image.workspace = true
nalgebra-glm.workspace = true
learnopengl-shared = { path = "../../../shared" }
