[package]
name = "learnopengl-1-7-3-camera_mouse_zoom"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
image.workspace = true
nalgebra-glm.workspace = true
learnopengl-shared = { path = "../../../shared" }
