[package]
name = "learnopengl-2-1-colors"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
image.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
learnopengl-shared = { path = "../../../shared" }
