[package]
name = "learnopengl-2-2-3-basic_lighting_exercise1"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
learnopengl-shared = { path = "../../../shared" }
