[package]
name = "learnopengl-2-4-2-lighting_maps_specular_map"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
image.workspace = true
learnopengl-shared = { path = "../../../shared" }
