[package]
name = "learnopengl-2-5-4-light_casters_spot_soft"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
image.workspace = true
learnopengl-shared = { path = "../../../shared" }
