[package]
name = "learnopengl-4-10-2-asteroids"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
rand.workspace = true
learnopengl-shared = { path = "../../../shared" }
