[package]
name = "learnopengl-4-3-1-blending_discard"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
image.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
learnopengl-shared = { path = "../../../shared" }
